Corrected the story board alignment

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -241,7 +241,8 @@ width: 100%;
 #story {
   background-color: #006747;
    padding-left: 10px; 
-   padding-right: 10px
+   padding-right: 10px;
+   margin-top: 60px;
 }
 
 .text-center {
